--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 * {
     margin: 0 auto;
 }
+.main {
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px
+}
